reduce number of erroneously failing tests; close #222